tests/cases/traits/errors/trait-object-generic-method-conversion.ari
trait Convert {
  fn keep[Value](self, value: Value) -> Value
}

struct Box {
  value: i64,
}

impl Convert for Box {
  fn keep[Out](self, value: Out) -> Out {
    value
  }
}

fn main() -> i64 {
  let item: dyn Convert = Box { value: 1 } as dyn Convert;
  0
}
